some little stuff, mostly style issues of classic map and picswap  of several browsers (Safari, Opera). Needs yet a review on IE.

--- a/style/maps/classic.css
+++ b/style/maps/classic.css
@@ -339,10 +339,10 @@ table tr.edit td.last_edited_label {
 }
 
 #edit_form fieldset table tr td.label{
-	min-width: 170px;
+    width: 13em;
 }
 
-.form_submits{
+.form_submits *{
 	width: 100%;
 	display: inline;
 	margin: 0px 2px 0px 0px;
